--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "add": "^2.0.6",
-    "expo": "^40.0.0",
+    "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-location": "~10.0.0",
     "expo-mail-composer": "~9.0.0",
     "expo-status-bar": "~1.0.3",
@@ -42,8 +43,7 @@
     "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~9.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
